<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/pokemon_image_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        android:layout_marginTop="16dp"
        android:text="@string/pokemon_name_placeholder" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        app:layout_constraintStart_toStartOf="@+id/nameTextView"
        app:layout_constraintEnd_toEndOf="@+id/nameTextView"
        android:layout_marginTop="8dp"
        android:text="@string/pokemon_weight_placeholder" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@+id/weightTextView"
        app:layout_constraintStart_toStartOf="@+id/nameTextView"
        app:layout_constraintEnd_toEndOf="@+id/nameTextView"
        android:layout_marginTop="8dp"
        android:text="@string/pokemon_height_placeholder" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_button_text"
        app:layout_constraintTop_toBottomOf="@+id/heightTextView"
        app:layout_constraintStart_toStartOf="@+id/nameTextView"
        app:layout_constraintEnd_toEndOf="@+id/nameTextView"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>